prometheus/endpoints.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-scheduler
  namespace: monitoring
  labels:
    app.kubernetes.io/name: kube-scheduler
spec:
  type: ClusterIP
  clusterIP: None  # 一定要设置 clusterIP:None
  ports:
  - port: 10251
    targetPort: 10251

---
apiVersion: v1
kind: Endpoints
metadata:
  name: kube-scheduler
  namespace: monitoring
subsets:
  - addresses:
    - ip: 10.0.0.101
    ports:
      - port: 10251
